--- a/Frontend/styles/inicio.css
+++ b/Frontend/styles/inicio.css
@@ -40,7 +40,7 @@
 }
 
 .item1{  
-    background-image: url("../assets/img/hombre.webp");
+    background-image: url("../assets/img/hombre.jpg");
 }
 .item2{
     background-image: url("../assets/img/mujer.jpeg"); 
@@ -52,3 +52,30 @@
     background-image: url("../assets/img/niña.jpg");
 }
 
+/* Estilo personalizado para extender el menú desplegable */
+.dropdown-menu.dropdown-menu-lg {
+    position: absolute;
+    width: 100vw;
+    left: -312px;
+    top: 56px;
+    right: 0;
+    border: none;
+    box-shadow: none;
+    background-color: rgba(41, 38, 38, 0.5);
+    
+}
+/* background-color: rgba(34, 32, 32, 0.5); */
+@media (max-width: 767px) {
+    .dropdown-menu.dropdown-menu-lg {
+        position: static;
+        width: auto;
+        left: auto;
+        right: auto;
+        background-color: rgba(41, 38, 38, 0.5);
+    }
+}
+
+.img1 .img2 .img3 .img4{
+    width: 100%;
+    height: 100%;
+}
