--- a/Frontend/styles/catalogo.css
+++ b/Frontend/styles/catalogo.css
@@ -1,16 +1,18 @@
-*{
+* {
     padding: 0;
     margin: 0;
     border: 0;
     box-sizing: border-box;
 }
-#prueba{
+
+#prueba {
     height: 50vh;
-    /* object-fit: fill; */    
+    /* object-fit: fill; */
     object-fit: cover;
 }
-.container-grid{
-    
+
+.container-grid {
+
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 20rem 20rem;
@@ -38,18 +40,22 @@
     font-family: 'Holtwood One SC', serif;
 }
 
-.item1{  
+.item1 {
     background-image: url("../assets/img/hombre.jpg");
 }
-.item2{
-    background-image: url("../assets/img/mujer.jpeg"); 
+
+.item2 {
+    background-image: url("../assets/img/mujer.jpeg");
 }
-.item3{
+
+.item3 {
     background-image: url("../assets/img/niño.avif");
 }
-.item4{
+
+.item4 {
     background-image: url("../assets/img/niña.jpg");
 }
+
 .dropdown-menu.dropdown-menu-lg {
     position: absolute;
     width: 100vw;
@@ -59,8 +65,9 @@
     border: none;
     box-shadow: none;
     background-color: rgba(41, 38, 38, 0.5);
-    
+
 }
+
 /* background-color: rgba(34, 32, 32, 0.5); */
 @media (max-width: 767px) {
     .dropdown-menu.dropdown-menu-lg {
@@ -71,3 +78,83 @@
         background-color: rgba(41, 38, 38, 0.5);
     }
 }
+
+/* .card {
+    height: 380px;
+    border-radius: 20px;
+    padding: 5px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+}
+
+.card__content {
+    background: rgb(5, 6, 45);
+    border-radius: 17px;
+    width: 100%;
+    height: 100%;
+} */
+
+.card {
+    position: relative;
+    width: 290px;
+    height: 354px;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 12px;
+    gap: 12px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.card::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    left: -5px;
+    margin: auto;
+    width: 300px;
+    height: 364px;
+    border-radius: 10px;
+    background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%);
+    z-index: -10;
+    pointer-events: none;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    display: flex;
+    justify-content: center;
+}
+
+.card::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
+    transform: translate3d(0, 0, 0) scale(0.95);
+    filter: blur(20px);
+}
+
+.heading {
+    font-size: 20px;
+    text-transform: capitalize;
+    font-weight: 700;
+}
+
+.card p:not(.heading) {
+    font-size: 14px;
+}
+
+.card p:last-child {
+    color: #e81cff;
+    font-weight: 600;
+}
+
+.card:hover::after {
+    filter: blur(30px);
+}
+
+.card:hover::before {
+    transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
+}
+
